# tribosurf

./: .gitignore  AdaptedAtomateFWs.py  Atomate_install_instructions.odt  CommonFiretasks.py  CommonFireworks.py  CommonWorkflows.py  Example_for_Forum.py  HelperFunctions.py  LICENSE.txt  MANIFEST.in  README.md  clean_up_DB.py  pyproject.toml  requirements.txt  setup.py
.spyproject/config/: workspace.ini
Tests/: FW.json  Input_test.in  POSCAR_CuO001GaAs001.vasp  Push_Spec_for_Forum.py  SubWorkflowsFromForum.py  SubWorkflowsFromForum_old.py  TestBuildInterface.py  TestContentPass.py  TestReadInputsFetchRelax.py  TestRelaxSubworkflow.py  TestStartWorkchain.py  TestSubWorkFlow.py  Test_ConvergeEncut.py  Test_ConvergeKpoints.py  Test_StaticCalc.py
backup/: CommonFiretasks.py  CustomFiretasks.py  CustomFireworks.py  HelperFunctions.py
docs/: slab_opt_thick.md  slab_opt_thick.odg  slab_opt_thick_final.odg
tests/HeteroStructureHS/: C.POSCAR  calculate_hs.py
triboflow/: defaults.json  helper_functions.py  homoatomic_materials.json  plotting.py
triboflow/PES_functions/: HS_functions.py  MEP_functions.py  PES_functions.py  obsolete_functions.py  utility_functions.py
triboflow/core/: config.json  logging.py
triboflow/firetasks/: .encut_convergence.py.swp  PES.py  PPES.py  adhesion.py  charge_density_analysis.py  charge_test.py  check_inputs.py  convergence.py  core.py  defaults_fw.json  dielectric.py  encut_convergence.py  errors.py  fv.py  init_check.py  init_db.py  kpoint_convergence.py  run_slabs_wfs.py  slab.py  slabs.py  slabs_wfs.py  start_swfs.py  surfen.py  (+7 more)
(+130 files in other folders)
